fix: dropdown overflow; cropped state of button oultine

--- a/src/components/dropdown/dropdown.module.scss
+++ b/src/components/dropdown/dropdown.module.scss
@@ -1,7 +1,6 @@
 @use '@/styles/utils/mixins' as *;
 
 .dropdown {
-  position: relative;
   display: inline-block;
   border-radius: var(--border-radius);
 }
