--- a/src/components/scroll-layout/scroll-layout.module.scss
+++ b/src/components/scroll-layout/scroll-layout.module.scss
@@ -1,8 +1,11 @@
+@use '@/styles/utils/mixins' as *;
+
 .layout {
   display: flex;
   flex-direction: column;
   height: 100%;
   overflow: hidden;
+  @include outline-visibility();
 
   &__header {
     margin-bottom: 0.25rem;
